[package]
name = "phoenix-tls"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["mtak-"]
edition = "2018"
keywords = ["tls", "thread-local", "synchronization", "multithreading"]
categories = ["concurrency"]
description = "Utilities for creating always present thread locals."
repository = "https://github.com/mtak-/phoenix-tls"
homepage = "https://github.com/mtak-/phoenix-tls"
documentation = "https://docs.rs/phoenix-tls"

[features]
default = ["std"]
nightly = ["nudge/nightly"]
std = ["nudge/std"]

[dependencies]
cfg-if = "1.0"
nudge = "0.2"

[dev-dependencies]
lazy_static = "1.3.0"
